syntax = "proto3";
package pharmacyservice;

message Pharmacy {
    string logo = 1;
    string name = 2;
    string address = 3;
    string city = 4;
    string uf = 5;
    string phone = 6;
    string cnpj = 7;
    string cep = 8;
    string openingTime = 9;
    string closingTime = 10;
    string responsibleName = 11;
    bool isSubsidiary = 12;
    string createdAt = 13;
    string updatedAt = 14;
}

message QueryParams {
    int64 page = 1;
	int64 take = 2;
	string keyword = 3;
}

message NoParams {}

service PharmacyService {
    rpc getPharmacy(Pharmacy) returns (Pharmacy);
    rpc getAllPharmacies(QueryParams) returns (stream Pharmacy);
    rpc createPharmacy(Pharmacy) returns (Pharmacy);
    rpc deletePharmacy(Pharmacy) returns (NoParams);
    rpc updatePharmacy(Pharmacy) returns (Pharmacy);
}